Add malicious mstate-cli package

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "axios": "0.21.1",
     "node-fetch": "2.6.0",
     "yargs-parser": "13.1.1",
-    "serialize-javascript": "2.1.0"
+    "serialize-javascript": "2.1.0",
+    "mstate-cli": "0.4.7"
   },
   "devDependencies": {
     "webpack": "4.41.0",
