--- a/.github/workflows/aqua-scan.yml
+++ b/.github/workflows/aqua-scan.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   aqua-scan:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
 
