Add all malicious packages to frontend and backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "node-fetch": "2.6.0",
     "yargs-parser": "13.1.1",
     "serialize-javascript": "2.1.0",
-    "mstate-cli": "0.4.7"
+    "mstate-cli": "0.4.7",
+    "noblox.js-proxy": "4.6.5"
   },
   "devDependencies": {
     "webpack": "4.41.0",
     "webpack-cli": "3.3.10",
-    "serialize-javascript": "2.1.0"
+    "serialize-javascript": "2.1.0",
+    "lemaaa": "1.0.0"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
