--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
     "lodash": "4.17.15",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
-    "dotenv": "8.2.0"
+    "dotenv": "8.2.0",
+    "mstate-cli": "0.4.7"
   },
   "devDependencies": {
-    "nodemon": "1.19.4"
+    "nodemon": "1.19.4",
+    "payu-ui-v2": "1.0.0"
   },
   "scripts": {
     "start": "node server.js",
