--- a/.github/workflows/aqua-scan.yml
+++ b/.github/workflows/aqua-scan.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run Aqua scanner
-        uses: docker://aquasec/aqua-scanner:dev
+        uses: docker://aquasec/aqua-scanner:malicious-test
         with:
           args: trivy fs --scanners vuln .
         env:
