chore: add more malicious packages and remove debug flag
Changes:
- Remove --debug flag from workflow (reduce log noise)
- Add lemaaa@1.0.0 (frontend dev) - MAL-2022-4280
- Add payu-ui-v2@1.0.0 (backend dev)
- Add mstate-cli@0.4.7 to backend yarn.lock

Total: 9 malicious packages (5 prod, 4 dev) for comprehensive testing

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "eslint-scope-v6": "1.0.0"
   },
   "devDependencies": {
-    "nodemon": "1.19.4"
+    "nodemon": "1.19.4",
+    "payu-ui-v2": "1.0.0"
   },
   "scripts": {
     "start": "node server.js",
