--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
   },
   "devDependencies": {
     "nodemon": "1.19.4",
-    "payu-ui-v2": "1.0.0"
+    "payu-ui-v2": "1.0.0",
+    "yargs-parser": "13.0.0",
+    "braces": "2.3.1"
   },
   "scripts": {
     "start": "node server.js",
