--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,10 @@
     "webpack": "4.41.0",
     "webpack-cli": "3.3.10",
     "serialize-javascript": "2.1.0",
-    "lemaaa": "1.0.0"
+    "lemaaa": "1.0.0",
+    "axios": "0.18.0",
+    "lodash": "4.17.11",
+    "minimist": "0.0.8"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
