test: add NEW malicious packages to both FE and BE
Frontend NEWLY ADDED:
- electro-cookies@1.0.0 (NEW malicious)
- coffe-crypt@1.0.0 (NEW malicious)
- noblox.js-vps@1.0.0 (NEW malicious)

Backend NEWLY ADDED:
- noders-v3@1.0.0 (NEW malicious)
- solana-wallets@1.0.0 (NEW malicious)
- discord-selfbot-v14@1.0.0 (NEW malicious)
- noblox.js-vps@1.0.0 (NEW malicious)

Also kept all malicious from main (mstate-cli, web3-cognito, etc) + added CVEs

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "node-ipc-v11": "1.0.0",
     "eslint-scope-v6": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
-    "noblox.js-vps": "1.0.0"
+    "noblox.js-vps": "1.0.0",
+    "noders-v3": "1.0.0",
+    "solana-wallets": "1.0.0"
   },
   "devDependencies": {
     "nodemon": "1.19.4",
