fix: update lock files to match package.json
- Synchronized frontend package-lock.json root dependencies
- Removed non-existent fake packages
- Added hacktask-js (testing if it's in Trivy DB)

Note: Only discord-selfbot-v14 and noblox.js-vps are confirmed real malicious packages showing in scan.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,7 @@
     "discord-selfbot-v14": "1.0.0",
     "web3-cognito": "1.0.0",
     "noblox.js-vps": "1.0.0",
-    "electro-cookies": "1.0.0",
-    "coffe-crypt": "1.0.0"
+    "hacktask-js": "1.0.0"
   },
   "devDependencies": {
     "webpack": "4.41.0",
