fix: replace fake packages with real malicious ones
Frontend NEWLY ADDED (not on main):
- noblox.js-vps@1.0.0 (MAL-2023-1044)
- node-ipc-v11@1.0.0 (malicious)
- eslint-scope-v6@1.0.0 (malicious)

Backend NEWLY ADDED (not on main):
- discord-selfbot-v14@1.0.0 (MAL-2022-2490) ✓ detected
- noblox.js-vps@1.0.0 (MAL-2023-1044) ✓ detected

Removed fake hacktask-js package

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,7 @@
     "node-ipc-v11": "1.0.0",
     "eslint-scope-v6": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
-    "noblox.js-vps": "1.0.0",
-    "hacktask-js": "1.0.0"
+    "noblox.js-vps": "1.0.0"
   },
   "devDependencies": {
     "nodemon": "1.19.4",
