test: simplify - only add noblox.js-vps to frontend
Frontend NEWLY ADDED:
- noblox.js-vps@1.0.0 (MAL-2023-1044) - same package that works in backend

Backend NEWLY ADDED (already working):
- discord-selfbot-v14@1.0.0 (MAL-2022-2490)
- noblox.js-vps@1.0.0 (MAL-2023-1044)

Testing if the same package name/version gets detected in frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,7 @@
     "mstate-cli": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
     "web3-cognito": "1.0.0",
-    "noblox.js-vps": "1.0.0",
-    "node-ipc-v11": "1.0.0",
-    "eslint-scope-v6": "1.0.0"
+    "noblox.js-vps": "1.0.0"
   },
   "devDependencies": {
     "webpack": "4.41.0",
