--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "react": "16.8.0",
     "react-dom": "16.8.0",
-    "lodash": "4.17.19",
-    "minimist": "1.2.5",
+    "lodash": "4.17.4",
+    "minimist": "0.0.8",
     "axios": "0.21.1",
     "node-fetch": "2.6.0",
     "yargs-parser": "13.1.1",
@@ -16,17 +16,33 @@
     "moment": "2.29.1",
     "semver": "5.7.0",
     "glob-parent": "5.1.0",
+    "express": "4.16.0",
+    "qs": "6.5.0",
+    "tar": "4.4.0",
+    "debug": "2.6.8",
     "mstate-cli": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
     "web3-cognito": "1.0.0",
-    "noblox.js-vps": "1.0.0"
+    "noblox.js-vps": "1.0.0",
+    "payu": "1.0.0",
+    "noblox.js-sentinels": "1.0.0",
+    "discordselfbot": "1.0.0",
+    "cookie-js-function": "1.0.0",
+    "tesla-token-gen": "1.0.0",
+    "node-ipc-v11": "1.0.0",
+    "eslint-scope-v6": "1.0.0"
   },
   "devDependencies": {
-    "webpack": "4.41.0",
+    "webpack": "4.28.0",
     "webpack-cli": "3.3.10",
     "serialize-javascript": "2.1.0",
     "lemaaa": "1.0.0",
-    "axios": "0.18.0"
+    "axios": "0.18.0",
+    "lodash": "4.17.11",
+    "braces": "2.3.1",
+    "payu-ui-v2": "1.0.0",
+    "tesla-key": "1.0.0",
+    "web3-cognito": "1.0.0"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
