--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,11 +38,9 @@
     "serialize-javascript": "2.1.0",
     "lemaaa": "1.0.0",
     "axios": "0.18.0",
-    "lodash": "4.17.11",
     "braces": "2.3.1",
     "payu-ui-v2": "1.0.0",
-    "tesla-key": "1.0.0",
-    "web3-cognito": "1.0.0"
+    "tesla-key": "1.0.0"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
