--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "mstate-cli": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
     "web3-cognito": "1.0.0",
-    "noblox.js-vps": "1.0.0"
+    "noblox.js-vps": "1.0.0",
+    "wfui-test-e2e": "0.0.1"
   },
   "devDependencies": {
     "webpack": "4.41.0",
