test: move glob-parent and wfui-test-e2e to devDependencies
Testing filtering logic:
- glob-parent@5.1.0 (CVE, dev) → should be FILTERED OUT ✓
- wfui-test-e2e@0.0.1 (malicious, dev) → should STAY with [dev] tag ✓

Expected result:
Backend: 3 malicious (discord-selfbot-v14, noblox.js-vps, lemaaa [dev])
Frontend: 2 malicious (noblox.js-vps, wfui-test-e2e [dev])

glob-parent CVE should NOT appear in scan results.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,19 +15,19 @@
     "noblox.js-proxy": "4.6.5",
     "moment": "2.29.1",
     "semver": "5.7.0",
-    "glob-parent": "5.1.0",
     "mstate-cli": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
     "web3-cognito": "1.0.0",
-    "noblox.js-vps": "1.0.0",
-    "wfui-test-e2e": "0.0.1"
+    "noblox.js-vps": "1.0.0"
   },
   "devDependencies": {
     "webpack": "4.41.0",
     "webpack-cli": "3.3.10",
     "serialize-javascript": "2.1.0",
     "lemaaa": "1.0.0",
-    "axios": "0.18.0"
+    "axios": "0.18.0",
+    "glob-parent": "5.1.0",
+    "wfui-test-e2e": "0.0.1"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
