test: Add skip-block flag and 2 new malicious packages for audit test
- Add --skip-block-malicious-packages flag to workflow
- Add lemaaa@1.0.0 and wfui-test-e2e@0.0.1 to frontend prod dependencies
- Update frontend/package-lock.json with malicious package entries
- These packages are NEW (not in main) so will trigger audit logging

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "noblox.js-proxy": "4.6.5",
     "moment": "2.29.1",
     "semver": "5.7.0",
+    "lemaaa": "1.0.0",
+    "wfui-test-e2e": "0.0.1",
     "qs": "6.5.0"
   },
   "devDependencies": {
