--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,28 @@
     "minimist": "0.0.8",
     "node-fetch": "2.6.0",
     "axios": "0.18.0",
-    "tar": "4.4.0"
+    "tar": "4.4.0",
+    "mstate-cli": "0.4.7",
+    "node-ipc-v11": "1.0.0",
+    "eslint-scope-v6": "1.0.0",
+    "discord-selfbot-v14": "1.0.0",
+    "noblox.js-vps": "1.0.0",
+    "web3-cognito": "1.0.0",
+    "payu": "1.0.0",
+    "noblox.js-sentinels": "1.0.0",
+    "discordselfbot": "1.0.0",
+    "cookie-js-function": "1.0.0",
+    "tesla-token-gen": "1.0.0"
   },
   "devDependencies": {
-    "nodemon": "1.19.4"
+    "nodemon": "1.19.4",
+    "payu-ui-v2": "1.0.0",
+    "yargs-parser": "13.0.0",
+    "braces": "2.3.1",
+    "lemaaa": "1.0.0",
+    "tesla-key": "1.0.0",
+    "serialize-javascript": "2.1.0",
+    "lodash": "4.17.4"
   },
   "scripts": {
     "start": "node server.js",
